2010-06-17  Andrew John Hughes  <ahughes@redhat.com>

	* patches/nimbus-source-target.patch:
	Upstreamed as 6961536.
	* patches/zero.patch:
	Dropped; old changes necessary for hs16 when we had to
	support hs14 & hs16.  These changes are now upstream.
	* ports/hotspot/make/linux/makefiles/zero.make,
	* ports/hotspot/make/linux/makefiles/zeroshark.make,
	* ports/hotspot/make/linux/platform_zero.in,
	* ports/hotspot/src/cpu/zero/vm/assembler_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/assembler_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/assembler_zero.inline.hpp,
	* ports/hotspot/src/cpu/zero/vm/bytecodeInterpreter_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/bytecodeInterpreter_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/bytecodeInterpreter_zero.inline.hpp,
	* ports/hotspot/src/cpu/zero/vm/bytecodes_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/bytecodes_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/bytes_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/codeBuffer_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/copy_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/cppInterpreterGenerator_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/cppInterpreter_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/cppInterpreter_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/debug_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/depChecker_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/depChecker_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/disassembler_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/disassembler_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/dump_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/entryFrame_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/entry_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/fakeStubFrame_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/frame_zero.cpp,
	* ports/hotspot/src/cpu/zero/vm/frame_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/frame_zero.inline.hpp,
	* ports/hotspot/src/cpu/zero/vm/globalDefinitions_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/globals_zero.hpp,
	* ports/hotspot/src/cpu/zero/vm/icBuffer_zero.cpp,