@@ -1,8 +1,8 @@
 # Dependencies
 
-OPENJDK_DATE = 15_apr_2010
-OPENJDK_MD5SUM = 39bbf623a6c83ca63b92593062a28146
-OPENJDK_VERSION = b19
+OPENJDK_DATE = 21_jun_2010
+OPENJDK_MD5SUM = 0b36adbf67e4f261e1b827ed4be4f447
+OPENJDK_VERSION = b20
 OPENJDK_URL = http://download.java.net/openjdk/jdk6/promoted/$(OPENJDK_VERSION)/
 
 CACAO_VERSION = 0.99.4
