@@ -1,3 +1,8 @@
+2010-06-22  Andrew John Hughes  <ahughes@redhat.com>
+
+	* Makefile.am:
+	Bump to b20 tarball.
+
 2010-06-17  Andrew John Hughes  <ahughes@redhat.com>
 
 	* patches/nimbus-source-target.patch:
